<resources>
    <string name="app_name">Wehere</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_app_id">Map</string>

    <string name="reg">Регистрация</string>
    <string name="reg_child">Регистрация ребенка</string>
    <string name="login">Войти</string>
    <string name="hint_password">Введите пароль</string>
    <string name="hint_password_retry">Введите пароль еще раз</string>
    <string name="hint_login">Введите логин</string>
    <string name="hint_login_child">Введите логин</string>

    <!-- code error-->
    <!--0 < server side; 999 > client side-->
    <string name="error_1">пользователь уже существует</string>
    <string name="error_2">логин или пароль не верны</string>
    <string name="error_3">пароли не совпадают</string>
    <string name="error_4">этот ребенок уже есть в базе</string>
    <string name="error_5">Пользователь не существует</string>
    <string name="error_6">Войдите в аккаунт</string>
    <string name="error_0">неизвестная ошибка</string>
    <string name="error_999">За этого пользователя никто не входил</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_handle">HandleActivity</string>
    <string name="error_7">эта функция доступна только родителю</string>
    <string name="get_name">Введите имя</string>
    <string name="error_666">Все хорошо</string>


</resources>
