<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#EEEEEE"
              android:orientation="vertical"
    >

    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar_reg"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:background="@color/colorPrimaryDark"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        >

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/btn_photo_parent"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0"
            android:background="@drawable/ic_photo"
            />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="6dp"
            android:layout_weight="1"
            android:text="Фотография"
            android:textAppearance="?android:attr/textAppearanceLarge"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="#ffffff"
        android:orientation="vertical"
        >

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/loginReg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:hint="@string/hint_login"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorPrimary"
            />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/password1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            app:met_floatingLabel="highlight"
            />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/password2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_password_retry"
            android:inputType="textPassword"
            app:met_floatingLabel="highlight"
            />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/nameReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/get_name"
            app:met_floatingLabel="highlight"
            />

    </LinearLayout>

    <Button
        android:id="@+id/btn_Reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimary"
        android:textColor="#BBDEFB"
        />

</LinearLayout>