<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:id="@+id/authForm"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#EEEEEE"
              android:orientation="vertical"
    >


    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar_auth"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:background="@color/colorPrimaryDark"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="#ffffff"
        android:orientation="vertical"
        >

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edit_auth_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:hint="@string/hint_login"
            app:met_floatingLabel="highlight"
            />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edit_auth_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            app:met_floatingLabel="highlight"
            />

    </LinearLayout>

    <com.hkm.ui.processbutton.iml.ActionProcessButton
        android:id="@+id/btn_auth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="-4dp"
        android:background="#42A5F5"
        android:text="@string/login"
        android:textColor="#BBDEFB"
        app:pb_textProgress="Loading"
        />

    <TextView
        android:id="@+id/errorView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"
        android:text="Bad username or password"
        android:textColor="#FF0000"
        android:textSize="14sp"
        android:visibility="gone"
        />

</LinearLayout>